# WB-Front

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start.py  tailwind.config.js  wb_dump.html
alembic/: env.py
alembic/versions/: 37659f55c1bc_create_products_table.py  b804008e97f9_init.py  dc29adf69dc7_create_products_table.py
app/: main.py
app/api/: products.py
app/core/: config.py
app/crud/: product_crud.py
app/db/: database.py  models.py
app/parser/: wb_parser.py
app/schemas/: product_schema.py
backend/: .env  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: products.py
backend/app/core/: config.py
backend/app/crud/: fetch_and_save.py  product_crud.py
backend/app/db/: database.py  session.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 6c35f2db3794_create_products_table.py
backend/app/parser/: run_parser.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.js  App.tsx  index.css
frontend/src/charts/: PriceHistogram.js  PriceHistogram.tsx
frontend/src/components/: Filter_other.js  Filter_other.tsx  SearchForm.js  SearchForm.tsx  Tables_and_Paginates.js  Tables_and_Paginates.tsx
frontend/src/components/ui/: card.js  card.tsx  input.js  input.tsx  slider.js  slider.tsx  table.js  (+1 more)
frontend/src/pages/: ProductDashboard.js  ProductDashboard.tsx
frontend/src/types/: product.ts
nginx/: nginx.conf
